$Id$

Denora v1.4.5-SVN
-----------------

Additions
n/a

Changes
n/a

Fixes
09/09/13 r333 [1] Fixed crash with ts6 when network contains a non-ts6 server

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Jeremy <jeremy@ssnet.ca>


Denora v1.4.4
-------------

Additions
09/09/13 r330 Denora now logs when loading db files
09/09/10 r324 Added support for Nefarious 1.3 (untested) [closes #564]
09/09/08 r318 Added support for InspIRCd 1.2 METADATA message [closes #566]
09/09/08 r318 ustatsregistered now also checks for user account [closes #566]
09/09/08 r314 Added option to exclude +B users from chanstats [closes #546]
09/09/08 r313 Added chan_clearmodes function to clear given chanmodes

Changes
09/09/11 r328 Spamfilter actions are no longer translated for compatibility
09/09/11 r327 /stats letter for getting spamfilters now definable
09/09/07 r310 Disable nick tracking on NICK if ustatsregistered is enabled
09/09/03 r304 Updated GeoIP.dat

Fixes
09/09/13 r330 Fixed segfault introduced in r327
09/09/08 r321 Ported fixes to Nefarious since last release to all P10 ircds
09/09/08 r319 Added OM/CM support to all p10 ircds
09/09/07 r312 Fixed channel part not being parsed if reason missing
09/09/03 r307 Fixed crash in sumuser if sql query fails [closes #562]
09/09/03 r306 Implemented nefarious CM mode handling
09/09/03 r306 [1] Fixed hostname priority in nefarious nick handling
09/09/03 r305 Denora now warns and exits on missing config for Hybrid [closes #563]
09/08/24 r303 Fixed inspircd12 not sending ts6sid on ENDBURST
09/07/27 r293 [1] Fixed first channel users not getting +o on nefarious [closes #557]
09/07/02 r291 [1] Fixed nefarious not adding some exceptions at burst [closes #555]
09/05/26 r289 Fixed weekly cron removing ignored records from chanstats
09/05/17 r287 [1] Fixed nefarious MODE message handling [closes #548]
09/05/16 r286 Fixed autoop not working anymore on chanstats add [closes #547]